[enhancement/40] Some String.isBlank() is changed to StringUtils.isBlank() #40
MovieRecommend의 limit은 없어도 작동이 되어야함

UserRecommend의 genre는 flexible하게 하려고 바꿈